--- a/bai1.html
+++ b/bai1.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="css/style.css">
         <style>
             .container{
+                margin-top:300px;
                 width: 500px; 
                 margin: auto; 
                 background-color: black;
