--- a/bai1.html
+++ b/bai1.html
@@ -41,21 +41,7 @@
             #dongho{font-style: italic;}
         </style>
     </head>
-    <body><div class="boxcenter">
-        <div class="row mb header">
-            <h1> SIÊU THỊ TRỰC TUYẾN</h1>
-        </div>
-
-        <div class="row mb menu">
-            <ul>
-                <li><a href="index.html">Trang chủ</a></li>
-                <li><a onclick="cligiohang()">Giỏ hàng</a></li>
-                <li><a href="lienhe.html">Liên hệ</a></li>
-                <li><a href="#">Góp ý</a></li>
-                <li><a href="#">Hỏi đáp</a></li>
-                <li><a href="bai4.html">Đăng ký</a></li>
-            </ul>
-        </div>
+    <body>
         <div class="container">
                 <h3><span id="td">GIẢI PHƯƠNG TRÌNH BẬC 2: </span><br><span id="a12"><span id="a1">a</span>x<sup>2</sup> + </span><span id="b1">b</span>x + <span id="c1">c</span> = 0</h3>
             <span>Số lần giải: <b id="solangiai">  </b></span>
